# aleph-message

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
.github/workflows/: build.yml  code-quality.yml  publish.yml  pytests.yml  tests.yml
aleph_message/: __init__.py  abstract.py  message.py  models.py  program.py  queries.py  signed.py  types.py  utils.py
aleph_message/models/: __init__.py  abstract.py  base.py  executable.py  item_hash.py  program.py
aleph_message/models/execution/: __init__.py  abstract.py  base.py  confidential.py  environment.py  instance.py  program.py  qemu.py  volume.py
aleph_message/tests/: download_messages.py  test_models.py  test_types.py  test_utils.py
aleph_message/tests/messages/: confidential_machine.json  forgotten.json  instance_confidential_machine.json  instance_machine.json  machine.json
