[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "aleph-message"
description = "Aleph.im message specification"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Hugo Herter", email = "git@hugoherter.com" },
]
requires-python = ">=3"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: System :: Distributed Computing",
]
dynamic = [ "version" ]
dependencies = [
  "pydantic>=1.10.5,<2.0.0",
  "typing_extensions>=4.5.0",
]
urls.Documentation = "https://aleph.im/"
urls.Homepage = "https://github.com/aleph-im/aleph-message"
scripts.pyaleph = "aleph.commands:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "Dockerfile",
  "LICENSE",
  "pyproject.toml",
  "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "Dockerfile",
  "LICENSE",
  "pyproject.toml",
  "README.md",
]

[tool.pytest]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
